without removing all the snapshot specs.  thanks to XStauff for pointing it
out.

-------------------------------------------------------------------------------

Sun Oct  3 16:46:39 PDT 1999
(Raster)

get rid of debugign  printfs....

-------------------------------------------------------------------------------

Sun Oct  3 16:58:09 PDT 1999
(Raster)

fix exist handler for pager to pass the right param... :)

-------------------------------------------------------------------------------

Sun Oct  3 17:26:37 PDT 1999
(Raster)

fix mem leak in ipc... :)

-------------------------------------------------------------------------------

Sun Oct  3 18:03:12 PDT 1999
(Mandrake)

typo

-------------------------------------------------------------------------------

Sun Oct  3 18:23:28 PDT 1999
(Raster)

flippy iconify anim + resize DOWN not UP with icons if > iconsize

-------------------------------------------------------------------------------

Sun Oct  3 18:28:53 PDT 1999
(Raster)

flippy icon patch :)

-------------------------------------------------------------------------------

Sun Oct  3 21:28:31 PDT 1999
(Raster)

grouped window patch for pager if moving form desktop -> desk

-------------------------------------------------------------------------------

Mon Oct  4 12:25:23 PDT 1999
(Mandrake)

removed apply button from groups break dialog since it was breaking all sorts
of stuff.

-------------------------------------------------------------------------------

Mon Oct  4 12:56:07 PDT 1999
(Raster)

patch to stop possible endless loops in ipc for menu reloading

-------------------------------------------------------------------------------

Mon Oct  4 13:16:37 PDT 1999
(KainX)

Removed extraneous files from ShinyMetal per ljlane's request.

-------------------------------------------------------------------------------

Mon Oct  4 13:31:29 PDT 1999
(Mandrake)

Fixed bugs in snapshotting windows.
order could have potentially been invalid.